--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,6 +37,7 @@ header {
     min-width: 320px;
     height: 334px;
     text-align: center;
+    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
 }
 
 header img {
@@ -46,6 +47,8 @@ header img {
 }
 
 .header--title-container {
+    display: flex;
+    flex-direction: column;
     width: 90%;
     min-width: 288px;
     max-width: 900px;
@@ -53,4 +56,49 @@ header img {
     margin-top: 40px;
     text-align: center;
     align-self: center;
+}
+
+.header--title-container h1 {
+    width: 100%;
+    font-size: 2.4rem;
+    color: #FFFFFF;
+    font-weight: bold;
+    line-height: 2.6rem;
+}
+
+.header--title-container p {
+    margin-top: 24px;
+    width: 100%;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    color: var(--soft-orange);
+    font-weight: medium;
+
+}
+
+.header--button {
+    position: absolute;
+    left: calc(50% - 115px);
+    top: 270px;
+    margin-top: 35px;
+    padding: 15px;
+    width: 229px;
+    height: 48px;
+    border-radius: 4px;
+    background-color: var(--off-white);
+    /* Sombra */
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border: none;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--warm-black);
+}
+
+header span {
+    display: inline-block;
+    width: 13px;
+    height: 8px;
+    margin-left: 10px;
+    background-image: url("../assets/icons/down-arrow.svg");
 }
