--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,8 +47,6 @@ header img {
 }
 
 .header--title-container {
-    display: flex;
-    flex-direction: column;
     width: 90%;
     min-width: 288px;
     max-width: 900px;
@@ -101,4 +99,53 @@ header span {
     height: 8px;
     margin-left: 10px;
     background-image: url("../assets/icons/down-arrow.svg");
+}
+
+main {
+    width: 100%;
+    height: auto;
+    background-color: var(--off-white);
+}
+
+.main-exchange-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    min-width: 320px;
+    height: auto;  
+}
+
+.backgroundImg {
+    width: 195px;
+    height: 195px;
+    margin-top: 40px;
+    background-image: url("../assets/img/Bitcoin.svg");
+    align-self: center;
+}
+
+.main-exchange-container--title {
+    width: 90%;
+    min-width: 288px;
+    max-width: 900px;
+    height: 52px;
+    margin-top: 40px;
+    text-align: center;
+    align-self: center;
+}
+
+.main-exchange-container--title h2 {
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--warm-black);
+}
+
+.main-exchange-container--title p {
+    margin-top: 24px;
+    font-size: 1.4rem;
+    font-weight: medium;
+    line-height: 1.8rem;
+    color: #757575;
 }
