--- a/CSS/styleclase.css
+++ b/CSS/styleclase.css
@@ -249,3 +249,123 @@ main {
     margin: auto;
     color: var(--warm-black-1);
 }
+
+.main-product-detail {
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 64px 15px 25px;
+    background-color: var(--warm-black);
+}
+
+.main-product-detail .product-detail--batata-logo {
+    position: absolute;
+    display: inline-block;
+    width: 40px;
+    height: 24px;
+    top: -10px;
+    left: calc(50% - 20px);
+    background-image: url("../assets/icons/batata.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.main-product-detail .product-detail--title {
+    width: 100%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+}
+
+.main-product-detail .product-detail--title h2 {
+    font-size: 2.4rem;
+    line-height: 2.6rem;
+    font-weight: bold;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.main-product-detail .product-detail--title p {
+    margin-top: 24px;
+    margin-bottom: 32px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    text-align: center;
+    color: #808080;
+}
+
+.producto-cards--container {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+}
+
+.product-detail-card {
+    background-color: var(--warm-black-1);
+    border-radius: 4px;
+    padding: 16px 16px 20px;
+    margin-bottom: 16px;
+}
+
+.product--card-title {
+    width: 100%;
+    color: #FFFFFF;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    margin-top: 12px;
+    margin-bottom: 10px;
+}
+
+.product--card-body {
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    font-weight: 500;
+    color: #808080;
+    font-style: normal;
+}
+
+.product-detail-card .clock {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url("../assets/icons/clock.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.product-detail-card .eye {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url("../assets/icons/eye.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.product-detail-card .dollar {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url("../assets/icons/dollar-sign.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.product-detail-card .check {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url("../assets/icons/check-circle.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
