--- a/CSS/styleclase.css
+++ b/CSS/styleclase.css
@@ -148,7 +148,7 @@ main {
     color: #757575;
 }
 
-.main-currency-table {
+.main-currency-table, .main-comission-table {
     width: 70%;
     min-width: 235px;
     max-width: 500px;
@@ -157,15 +157,21 @@ main {
     font-family: "Inter", sans-serif;
 }
 
-.main-currency-table .currency-table--title {
+.main-currency-table .currency-table--title, .main-comission-table .comission-table--title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
-    line-height: 2.3rem;
+    line-height: 2.3rem;  
+}
+
+.main-currency-table .currency-table--title {
     color: var(--bitcoin-orange);
 }
 
-.currency-table--container {
+.main-comission-table .comission-table--title {
+    color: var(--secondary-blue);
+}
+.currency-table--container, .comission-table--container {
     width: 90%;
     min-width: 230px;
     max-width: 300px;
@@ -173,12 +179,12 @@ main {
     margin: 0 auto;
 }
 
-.currency-table--container table {
+.currency-table--container table, .comission-table--container table {
     width: 100%;
     height: 100%;
 }
 
-.currency-table--container td {
+.currency-table--container td, .comission-table--container td {
     width: 50%;
     font-size: 1.6rem;
     font-weight: 500;
@@ -187,23 +193,23 @@ main {
     background-color: #FFFFFF;
 }
 
-.currency-table--container .table__top-left {
+.currency-table--container .table__top-left, .comission-table--container .table__top-left {
     border-radius: 15px 0 0 0;
 }
 
-.currency-table--container .table__top-right {
+.currency-table--container .table__top-right, .comission-table--container .table__top-right {
     border-radius: 0 15px 0 0;
 }
 
-.currency-table--container .table__bottom-left {
+.currency-table--container .table__bottom-left, .comission-table--container .table__bottom-left {
     border-radius: 0 0 0 15px;
 }
 
-.currency-table--container .table__bottom-right {
+.currency-table--container .table__bottom-right, .comission-table--container .table__bottom-right {
     border-radius: 0 0 15px 0;
 }
 
-.currency-table--container .table__right {
+.currency-table--container .table__right, .comission-table--container .table__right {
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
@@ -232,16 +238,23 @@ main {
     background-repeat: no-repeat;
 }
 
-.currency-table--date {
+.currency-table--date, .comission-table--date {
     width: 190px;
     height: 30px;
     margin: 16px auto 64px;
-    background-color: var(--soft-orange);
     padding: 8px;
     border-radius: 8px;
 }
 
-.currency-table--date p {
+.currency-table--date {
+    background-color: var(--soft-orange);
+} 
+
+.comission-table--date {
+    background-color: var(--soft-blue);
+}
+
+.currency-table--date p, .comission-table--date p {
     font-family: "Inter", sans-serif;
     font-weight: 300;
     font-size: 1.2rem;
@@ -304,11 +317,15 @@ main {
     margin: 0 auto;
 }
 
-.product-detail-card {
+.product-detail--card {
+    width: 100%;
+    min-width: 288px;
+    max-width: 400px;
     background-color: var(--warm-black-1);
     border-radius: 4px;
     padding: 16px 16px 20px;
     margin-bottom: 16px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
 }
 
 .product--card-title {
@@ -329,7 +346,7 @@ main {
     font-style: normal;
 }
 
-.product-detail-card .clock {
+.product-detail--card .clock {
     display: inline-block;
     width: 20px;
     height: 20px;
@@ -339,7 +356,7 @@ main {
     background-repeat: no-repeat;
 }
 
-.product-detail-card .eye {
+.product-detail--card .eye {
     display: inline-block;
     width: 20px;
     height: 20px;
@@ -349,7 +366,7 @@ main {
     background-repeat: no-repeat;
 }
 
-.product-detail-card .dollar {
+.product-detail--card .dollar {
     display: inline-block;
     width: 20px;
     height: 20px;
@@ -359,7 +376,7 @@ main {
     background-repeat: no-repeat;
 }
 
-.product-detail-card .check {
+.product-detail--card .check {
     display: inline-block;
     width: 20px;
     height: 20px;
@@ -367,5 +384,29 @@ main {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.main-img {
+    position: relative;
+    width: 100%;
+}
+
+.main-img img {
+    width: 100%;
+    min-width: 320px;
+}
+
+.main-img h2 {
+    position: absolute;
+    top: 64px;
+    left: calc(50% - 144px);
+    width: 90%;
+    width: 288px;
+    height: auto;
+    font-size: 2.4rem;
+    line-height: 2.6rem;
+    font-weight: bold;
+    text-align: center;
+    color: #FFFFFF;
 }
 
