--- a/CSS/styleclase.css
+++ b/CSS/styleclase.css
@@ -148,12 +148,22 @@ main {
     color: #757575;
 }
 
+.main-tables-container {
+    display: flex;
+    height: 370px;
+    padding: 0 55px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
 .main-currency-table, .main-comission-table {
+    position: relative;
+    scroll-snap-align: center;
     width: 70%;
     min-width: 235px;
     max-width: 500px;
     height: 360px;
-    margin: 0 auto;
+    margin: 0 30px;
     font-family: "Inter", sans-serif;
 }
 
@@ -315,6 +325,7 @@ main {
     min-width: 288px;
     height: auto;
     margin: 0 auto;
+    padding: 0 auto;
 }
 
 .product-detail--card {
@@ -324,6 +335,7 @@ main {
     background-color: var(--warm-black-1);
     border-radius: 4px;
     padding: 16px 16px 20px;
+    margin: 0 auto;
     margin-bottom: 16px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
 }
@@ -387,19 +399,18 @@ main {
 }
 
 .main-img {
-    position: relative;
-    width: 100%;
-}
-
-.main-img img {
     width: 100%;
     min-width: 320px;
+    height: 50vh;
+    background-image: url("../assets/img/bitcoinbaby2x.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
 }
 
 .main-img h2 {
-    position: absolute;
-    top: 64px;
-    left: calc(50% - 144px);
+    padding-top: 64px;
     width: 90%;
     width: 288px;
     height: auto;
@@ -410,3 +421,186 @@ main {
     color: #FFFFFF;
 }
 
+.main-plans-container {
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    min-height: 537px;
+    padding: 64px 0;
+    background-color: var(--off-white);
+    text-align: center;
+}   
+
+.plans--title {
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: auto;
+    margin: 0 auto;
+}
+
+.plans--title h2{
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--warm-black);
+    margin-bottom: 24px;
+}
+
+.plans--title p {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+    margin-bottom: 50px;
+}
+
+.plans-container--slider {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
+.plans-container--card1, .plans-container--card3 {
+    position: absolute;
+    width: 60%;
+    max-width: 190px;
+    height: auto;
+    min-height: 247px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+    background-color: #FFFFFF;
+}
+
+.plans-container--card1 {
+    left: -133px;
+}
+
+.plans-container--card3 {
+    top: 0;
+    left: calc(100% - 55px);
+}
+
+.plans-container--card2 {
+    position: relative;
+    text-align: center;
+    width: 60%;
+    min-width: 190px;
+    max-width: 300px;
+    height: auto;
+    min-height: 247px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+    background-color: #FFFFFF;
+    margin: 0 auto;
+}
+
+.recommended {
+    position: absolute;
+    top:-10px;
+    left: calc(50% - 50px);
+    width: 100px;
+    padding: 8px;
+    border-radius: 8px;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: bold;
+    background-color: var(--bitcoin-orange);
+    color: #FFFFFF;
+}
+
+.plan-info-container .plan-card--title {
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    margin-top: 31px;
+}
+
+.plan-info-container .plan-card--price {
+    position: relative;
+    margin-top: 8px;
+    font-size: 5.2rem;
+    line-height: 6rem;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.plan-info-container .plan-card--price span {
+    position: absolute;
+    font-size: 1.2rem;
+    line-height: 15px;
+    font-weight: 500;
+    color: #363636;
+    left: calc(50% - 4px - 40px);
+    top: 10px;
+}
+
+.plan-info-container .plan-card--saving {
+    font-family: "Inter", sans-serif;
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    width: 160px;
+    height: auto;
+    color: #757575;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.plan-info-container button {
+    margin-top: 16px;
+    width: 150px;
+    height: 50px;    
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    font-family: 'DM Sans', sans-serif; 
+    background-color: #FAF8F7;
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+}
+
+
+.plan-info-container button span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-left: 8px;
+    background-image: url("../assets/icons/orange-right-arrow.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    vertical-align: text-bottom;
+}
+
+footer {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background-color: var(--bitcoin-orange);
+    
+}
+
+footer section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+footer ul {
+    list-style: none;
+}
+
+footer li {
+    margin: 10px 0;
+}
+
+footer li a {
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #FFFFFF;
+    margin-top: 4px;
+}
